Cacalatur/doc/logfile.txt
Class documentation
<---- javadoc command: ---->
/Applications/BlueJ.app/Contents/Frameworks/jdk.framework/Versions/A/Contents/Home/bin/javadoc
-author
-version
-nodeprecated
-package
-noindex
-notree
-nohelp
-nonavbar
-source
1.8
-classpath
/Applications/BlueJ.app/Contents/Resources/Java/bluejcore.jar:/Applications/BlueJ.app/Contents/Resources/Java/junit-4.8.2.jar:/Users/noah/Downloads/objectdraw.jar:/Applications/BlueJ.app/Contents/Resources/Java/userlib/pi4j-core.jar:/Applications/BlueJ.app/Contents/Resources/Java/userlib/pi4j-device.jar:/Applications/BlueJ.app/Contents/Resources/Java/userlib/pi4j-gpio-extension.jar:/Applications/BlueJ.app/Contents/Resources/Java/userlib/pi4j-service.jar:/Users/noah/COMPPROG1/Cacalatur
-d
/Users/noah/COMPPROG1/Cacalatur/doc
-encoding
UTF-8
-charset
UTF-8
-docletpath
/Applications/BlueJ.app/Contents/Resources/Java/bjdoclet.jar
-doclet
bluej.doclet.doclets.formats.html.HtmlDoclet
/Users/noah/COMPPROG1/Cacalatur/Cacalatur.java
<---- end of javadoc command ---->
Loading source file /Users/noah/COMPPROG1/Cacalatur/Cacalatur.java...
/Users/noah/COMPPROG1/Cacalatur/Cacalatur.java:223: error: ';' expected
						top.setScore(1/(top.getScore())));
						                                ^
/Users/noah/COMPPROG1/Cacalatur/Cacalatur.java:231: error: ';' expected
						top.setScore(1/(top.getScore())));
						                                ^
2 errors
